--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,10 +3,14 @@
 
 :root {
     --primary: #454545;
+    --defalut-header-height: 60px;
+    --default-width-page: 1150px;
 }
 
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 html {
@@ -17,4 +21,13 @@ body {
     font-family: 'Libre Franklin', sans-serif;
     font-size: 1.6rem;
     line-height: 1.5;
+}
+
+.container {
+    width: var(--default-width-page);
+    margin: auto;
+}
+
+.hidden {
+    display: none;
 }
